<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/red">

        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:background="@drawable/back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="积分问题"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_problem_title1"
            android:textColor="@color/balance_problem_title"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_problem_details1"
            android:textColor="@color/balance_problem_details"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_problem_title2"
            android:textColor="@color/balance_problem_title"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_problem_details2"
            android:textColor="@color/balance_problem_details"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_problem_title3"
            android:textColor="@color/balance_problem_title"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_problem_details3"
            android:textColor="@color/balance_problem_details"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>
    </LinearLayout>
</LinearLayout>
