<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/red">

        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:background="@drawable/back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="女士手表腕表石英表"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.android.slowlife.view.MyScrollview
        android:id="@+id/service_center_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ensure_bt"
        android:layout_below="@+id/top_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.android.slowlife.view.InfiniteLoopViewNet
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="10sp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="女士手表腕表石英表"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/integral_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30000"
                    android:textSize="16sp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="积分"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:layout_toRightOf="@+id/integral_text"
                    android:layout_alignBottom="@+id/integral_text"/>
                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥750"
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_color"
                    android:layout_toRightOf="@+id/text"
                    android:layout_alignBottom="@+id/integral_text"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:id="@+id/freight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="运费：包邮"
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_color"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/integral_text"
                    android:layout_marginLeft="16dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/address_rl"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="配送至：你还未填写收货信息，马上去填写"
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_color"
                    android:layout_centerVertical="true"/>
                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true" >
                    <ImageView
                        android:layout_width="6dp"
                        android:layout_height="10dp"
                        android:background="@drawable/down"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="详情说明："
                android:textSize="12sp"
                android:textColor="@color/hint_text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="商品简介"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="兑换流程"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flow_title1"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flow_title2"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注意事项"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/announcements_title1"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/announcements_title2"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/announcements_title3"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/announcements_title4"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </com.android.slowlife.view.MyScrollview>

    <Button
        android:id="@+id/ensure_bt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login2_corners_bgall"
        android:gravity="center"
        android:text="积分不足"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
